# rs-fealib

./: Cargo.toml  README.md  build.rs  feature_list_wise.conf  test.txt  test.yaml
src/: config.rs  config.yaml  lib.rs  main.rs  x
src/extract_impls/: direct.rs  ext_ins.rs
src/fealib/: fe_extract.rs  lib.rs  main.rs
src/fealib/engine/: engine.rs  lr_engine.rs
src/fealib/extract_impls/: combine.rs  direct.rs  ext_ins.rs
src/proto/: feature.proto  feature.rs  feature_grpc.rs
src/service/: main.rs
tests/: integration_tests.rs
