[package]
name = "rs-fealib"
version = "0.1.0"
authors = ["zhangyule <zyl2336709@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "*"
serde_yaml = "0.8"
lru = "*"
clippy = "*"
regex = "1"
murmurhash64 = "*"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "*"
clap = "*"
brpc-rs = "0.1.0"
prost = "0.5.0"
bytes = "0.4.12"

[build-dependencies]
brpc-build = "0.1.0"

[[bin]]
name = 'fe_extractor'
path = 'src/fealib/main.rs'

[lib]
name = 'rs_fealib'
path = "src/fealib/lib.rs"
