[package]
name = "rs-fealib"
version = "0.1.0"
authors = ["zhangyule <zyl2336709@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_yaml = "0.8"
clippy = "*"
regex = "1"
murmurhash64 = "*"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "*"
clap = "*"
prost = "0.6"
tokio = { version = "0.2", features = ["rt-threaded", "time", "stream", "fs", "macros", "uds"] }
async-stream = "0.2"
tower = "0.3"
rand = "0.7"
serde_json = "1.0"
tracing = "0.1.16"
tracing-subscriber = { version = "0.2", features = ["tracing-log"] }
tracing-attributes = "0.1"
tracing-futures = "0.2"
# Required for wellknown types
prost-types = "0.6"
hyper = "0.13"
warp = { version = "0.2", default-features = false }
http = "0.2"
http-body = "0.3"
pin-project = "0.4.17"
listenfd = "0.3"
futures = "0.3.5"
log = "0.4.5"
slog = "2.0"
slog-async = "2.1"
slog-stdlog = "3.0"
slog-scope = "4.0"
slog-term = "2.2"
tls-api-stub = "*"
dubble = "*"
grpc = "*"
grpc-protobuf = "*"
protobuf = "2"
httpbis         = { git = "https://github.com/stepancheg/rust-http2" }

[build-dependencies]
# protoc-rust-grpc = { git = "https://github.com/stepancheg/grpc-rust" }
protoc-rust-grpc = "*"

[[bin]]
name = 'fe_extractor'
path = 'src/fealib/main.rs'

[lib]
name = 'rs_fealib'
path = "src/fealib/lib.rs"
test = false

[[bin]]
name = 'service'
path = 'src/service/main.rs'
